# haquery

./: .gitignore  LICENSE  README.md  haquery.cabal  stack.yaml
.github/workflows/: haskell.yml
src/: .ghci  Haquery.hs  haquery.hs
tests/: HaquerySpec.hs  haquery.hs
