name:                haquery
version:             0.1.1.3
synopsis:            jQuery for Haskell.
description:         haquery allows CSS selector queries on tagsoup trees
homepage:            https://github.com/crufter/haquery
license:             BSD3
license-file:        LICENSE
author:              Janos Dobronszki
maintainer:          dobronszki@gmail.com
category:            HTML
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Haquery

  build-depends:       base >= 4.5 && < 5,
                       transformers,
                       split,
                       containers,
                       text,
                       parsec,
                       tagsoup
  hs-source-dirs:      src

Test-Suite test-haquery
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: tests
    other-modules:  HaquerySpec
    build-depends:  base,
                    haquery,
                    hspec,
                    text
    build-tool-depends: hspec-discover:hspec-discover == 2.*