name:                haquery
version:             0.1.1.3
synopsis:            jQuery for Haskell.
description:         haquery allows CSS selector queries on tagsoup trees
homepage:            https://github.com/crufter/haquery
license:             BSD3
license-file:        LICENSE
author:              Janos Dobronszki
maintainer:          dobronszki@gmail.com
category:            HTML
build-type:          Simple
cabal-version:       >=1.8
source-repository head
  type: github
  location: https://github.com/crufter/haquery

library
  exposed-modules:     Haquery

  build-depends:       base >= 4.5 && < 5,

                       containers >= 0.6.5 && < 0.7,
                       parsec >= 3.1.15 && < 3.2,
                       transformers >= 0.5.6 && < 0.7,
                       text >= 1.2.5 && < 2.1,
                       split >= 0.2.3 && < 0.3,
                       tagsoup >= 0.14.8 && < 0.15
  hs-source-dirs:      src

Test-Suite test-haquery
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: tests
    other-modules:  HaquerySpec
    build-depends:  base,
                    haquery,
                    hspec >=2.0 && <2.12,
                    text
    build-tool-depends: hspec-discover:hspec-discover == 2.*